unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Custom_Mapping__c/DSCORGPKG__DiscoverOrg_Custom_Mapping__c.object-meta.xml
<CustomObject>
    <label>DiscoverOrg Custom Mapping</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>DiscoverOrg Custom Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DiscoverOrg Custom Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>