unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Custom_Mapping__c/fields/DSCORGPKG__Add__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Add__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add</label>
    <type>Checkbox</type>
</CustomField>