unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Custom_Mapping__c/fields/DSCORGPKG__BlankOnly__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__BlankOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BlankOnly</label>
    <type>Checkbox</type>
</CustomField>