unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Custom_Mapping__c/fields/DSCORGPKG__isConflict__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isConflict__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isConflict</label>
    <type>Checkbox</type>
</CustomField>