unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Custom_Mapping__c/fields/DSCORGPKG__isEditable__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isEditable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isEditable</label>
    <type>Checkbox</type>
</CustomField>