unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Custom_Mapping__c/fields/DSCORGPKG__isVisible__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isVisible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isVisible</label>
    <type>Checkbox</type>
</CustomField>