unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Custom_Mapping__c/fields/DSCORGPKG__NightlyJob__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__NightlyJob__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NightlyJob</label>
    <type>Checkbox</type>
</CustomField>