unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Custom_Mapping__c/fields/DSCORGPKG__Salesforce_Field__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Salesforce_Field__c</fullName>
    <label>Salesforce Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>