unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Custom_Mapping__c/fields/DSCORGPKG__Update__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update</label>
    <type>Checkbox</type>
</CustomField>